--- a/www/index.html
+++ b/www/index.html
@@ -9,14 +9,19 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
 
+    <!-- Polyfill to support promises in Android versions older than 4.4.4 -->
+    <script src="lib/bluebird.min.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic.cloud.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/bundle.js"></script>
+
     <!--
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
